16666
Attempting to compile attached files with scalac results in an error:

{code}
scalac Test.scala IntAnnotation.java Const.java 
Test.scala:1: error: annotation argument needs to be a constant; found: Const.CONST
@IntAnnotation(Const.CONST)
                     ^
one error found
{code}

If Const.java is compiled with javac first, scalac does not report any errors:

javac Const.java 
scalac Test.scala IntAnnotation.java


Another example: https://gist.github.com/lrytz/838709adcfb0f08eb2c5. SBT runs the scala compiler only once.
